appId: com.poyka.ripdpi
---
- setOrientation: PORTRAIT
- launchApp:
    stopApp: true
- assertVisible:
    id: "home-screen"
- tapOn:
    id: "bottom-nav-settings"
- assertVisible:
    id: "settings-screen"
- tapOn:
    id: "settings-advanced-settings"
- assertVisible:
    id: "advanced_settings-screen"
