appId: com.poyka.ripdpi
---
- launchApp
- tapOn: "Settings"
- tapOn: "Diagnostics"
- assertVisible:
    text: "Diagnostics|Network"
